// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple bank database
  '''
}

Table users as U {
   username varchar [pk]
   hashed_password varchar [not null]
   full_name varchar [not null]
   email  varchar [unique,not null]
   password_changed_at timestamptz [not null,default: `0001-01-01 00:00:00:00z`]
   created_at timestamptz [not null,default: `now()`]
} 
Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username,not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null,default: `now()`]
  
  Indexes {
    owner
    (owner,currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null]
  created_at timestamptz [not null,default: `now()`]
  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id]
  to_account_id bigint [ref: > A.id]
  amount bigint [not null]
  created_at timestamptz [not null,default: `now()`]

  Indexes {
    from_account_id
    to_account_id
  }
}


